--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -18,6 +18,7 @@ body {
 .header h1 {
     display: inline-block;
     font-size: 48px;
+    text-decoration: underline; /*Appying underline style to our header title to make it more visible*/
 }
 
 .header h1 .seo {
@@ -30,6 +31,7 @@ body {
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
+    
 }
 
 .header div ul {
@@ -57,6 +59,23 @@ p {
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
+    color:white
+}
+
+.hero h1{                /*positioning heading before styled paragraph on the backgorund image section*/
+    position: relative;
+    top: 440px;
+    left: 100px;
+}
+
+#intro{                 /*styling and positioning paragraph above heading and located on the background image section*/
+    position: relative;
+    top: 440px;
+    left: 100px;
+    padding: 100px;
+    border: 5px solid white;
+    display: inline-block;
+    font-size: 20px;
 }
 
 .float-left {
@@ -83,7 +102,7 @@ p {
     width: 20%;
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #2589bd;
+    background-color: red;
 }
 
 .benefit-lead {
@@ -139,7 +158,7 @@ p {
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
+    background-color: red; /**/
     color: #ffffff;
 }
 
@@ -148,7 +167,7 @@ p {
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
+    background-color: red; /**/
     color: #ffffff;
 }
 
@@ -157,7 +176,7 @@ p {
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
+    background-color: red;
     color: #ffffff;
 }
 
