--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,7 +153,7 @@ p {
     max-width: 150px;
 }
 
-.Learning{                  /**/
+.Learning{                  /*styling learning division*/
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -163,7 +163,7 @@ p {
 
 }
 
-.Company{                  /**/
+.Company{                  /*styling company division*/
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -173,12 +173,12 @@ p {
 
 }
 
-.Customers{             /**/
+.Customers{             /*styling customers division*/
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: red; /**/
+    background-color: red; /*changed background to red*/
     color: #ffffff;
 
 }
@@ -188,7 +188,7 @@ p {
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: red; /**/
+    background-color: red; /*changed background to red*/
     color: #ffffff;
 }
 
@@ -210,21 +210,21 @@ p {
     color: #ffffff;
 }
 
-.Learning img{              /**/
+.Learning img{              /*specifying position and max height for learning image*/
 
     position: relative;
     left: 1000px;
     max-height: 200px;
 }
 
-.Company img{              /**/
+.Company img{              /*specifying position and max height for company image*/
 
     position: relative;
     left: 10px;
     max-height: 200px;
 }
 
-.Customers img{              /**/
+.Customers img{              /*specifying position and max height for company image*/
 
     position: relative;
     left: 1000px;
@@ -244,7 +244,7 @@ p {
     max-height: 200px;
 }
 
-.Learning h2{              /**/
+.Learning h2{              /*specifying margin,font,and position for learning section*/
 
     margin-bottom: 20px;
     font-size: 36px;
@@ -253,17 +253,17 @@ p {
 
 }
 
-.Company h2{             /**/
+.Company h2{             /*specifying margin,font,and position for company section*/
 
     margin-bottom: 20px;
     font-size: 36px;
     position: relative;
-    left: 450px;
+    left: 350px;
     bottom: 180px ;
 
 }
 
-.Customers h2{          /**/
+.Customers h2{          /*specifying margin,font,and position for customer section*/
 
     margin-bottom: 20px;
     font-size: 36px;
@@ -284,6 +284,26 @@ p {
 .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
+
+}
+
+#L{                                  /*adjusting positiopn for paragraph on learning*/
+
+    position: relative;
+    bottom: 190px;
+}
+
+#Co{                               /*adjusting positiopn for paragraph on company*/
+position: relative;
+bottom: 190px;
+left: 350px;
+
+}
+
+#Cu{                               /*adjusting position for paragraph on customer section*/
+
+    position: relative;
+    bottom: 190px;
 }
 
 .footer {
@@ -291,9 +311,10 @@ p {
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
-    background-color: yellow;
+    background-color: yellow;  /*footer background changed to yellow*/
 }
 
 .footer h2 {
     font-size: 20px;
 }
+
