--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,55 +3,55 @@
     padding: 0;
     margin: 0;
 }
-/**/
+/*I am assigning a background color to the whole webpage, especially only inside of the body element*/
 body {
-    background-color: #d9dcd6;
+    background-color: #d9dcd6; /*grey color*/
 }
-/**/
+/*adjusting padding size inside of the header semantic element, especifying different font-family, background color of blue, and a white color for words*/
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
-/**/
+/*displaying heading 1(Horiseon) allowing to set specific width and height, attributing a text decoration to highlight title, and adjusting font size of h1*/
 header h1 {
     display: inline-block;
     font-size: 48px;
     text-decoration: underline; 
 }
-
+/*assigning different font color to the (seo) part of the header title*/
 header h1 .seo {
     color: #d9dcd6;
 }
-
+/*navigation bar decoration to show options to navigate throught the website*/
 header nav {
-    padding-top: 15px;
-    margin-right: 20px;
-    float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
+    padding-top: 15px; /**/
+    margin-right: 20px; /**/
+    float: right; /**/
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; /**/
+    font-size: 20px; /**/
     
 }
-
+/**/
 header nav ul {
-    list-style-type: none;
+    list-style-type: none; /**/
 }
 
-header nav ul li {
-    display: inline-block;
-    margin-left: 25px;
+header nav ul li { /**/
+    display: inline-block; /**/
+    margin-left: 25px; /**/
 }
-
+/**/
 a {
     color: #ffffff;
     text-decoration: none;
 }
-
+/**/
 p {
     font-size: 16px;
 }
-
+/**/
 .hero {
     height: 800px;
     width: 100%;
@@ -61,11 +61,11 @@ p {
     background-position: center;
     color:white
 }
-
+/**/
 .hero h1{                /*positioning heading before styled paragraph on the backgorund image section*/
     position: relative;
-    top: 440px;
-    left: 100px;
+    top: 440px; /**/
+    left: 100px; /**/
 }
 
 #intro{                 /*styling and positioning paragraph above heading and located on the background image section*/
@@ -77,23 +77,23 @@ p {
     display: inline-block;
     font-size: 20px;
 }
-
+/**/
 .float-left {
     float: left;
     margin-right: 25px;
 }
-
+/**/
 .float-right {
     float: right;
     margin-left: 25px;
 }
-
+/**/
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
-
+/**/
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -104,43 +104,43 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: red;
 }
-
+/**/
 .benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
+/**/
 .benefit-brand {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
+/**/
 .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
-
+/**/
 .benefit-lead h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-
+/**/
 .benefit-brand h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-
+/**/
 .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-
+/**/
 .benefit-lead img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
+/**/
 .benefit-brand img {
     display: block;
     margin: 10px auto;
@@ -152,8 +152,8 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
-
-.Learning{                  /*styling learning division*/
+/**/
+.Learning{                  
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -162,8 +162,8 @@ p {
     color: #ffffff;
 
 }
-
-.Company{                  /*styling company division*/
+/**/
+.Company{                  
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -172,26 +172,26 @@ p {
     color: #ffffff;
 
 }
-
-.Customers{             /*styling customers division*/
+/**/
+.Customers{             
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: red; /*changed background to red*/
+    background-color: red; 
     color: #ffffff;
 
 }
-
+/**/
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: red; /*changed background to red*/
+    background-color: red; 
     color: #ffffff;
 }
-
+/**/
 .online-reputation-management {
     margin-bottom: 20px;
     padding: 50px;
@@ -200,7 +200,7 @@ p {
     background-color: red; /**/
     color: #ffffff;
 }
-
+/**/
 .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
@@ -209,111 +209,101 @@ p {
     background-color: red;
     color: #ffffff;
 }
-
-.Learning img{              /*specifying position and max height for learning image*/
+/**/
+.Learning img{              
 
     position: relative;
     left: 1000px;
     max-height: 200px;
 }
-
-.Company img{              /*specifying position and max height for company image*/
+/**/
+.Company img{              
 
     position: relative;
     left: 10px;
     max-height: 200px;
 }
-
-.Customers img{              /*specifying position and max height for company image*/
+/**/
+.Customers img{              
 
     position: relative;
     left: 1000px;
     max-height: 200px;
 }
-
-
+/**/
 .search-engine-optimization img {
     max-height: 200px;
 }
-
+/**/
 .online-reputation-management img {
     max-height: 200px;
 }
-
+/**/
 .social-media-marketing img {
     max-height: 200px;
 }
-
-.Learning h2{              /*specifying margin,font,and position for learning section*/
-
+/**/
+.Learning h2{              
     margin-bottom: 20px;
     font-size: 36px;
     position: relative;
     bottom: 180px;
-
 }
-
-.Company h2{             /*specifying margin,font,and position for company section*/
-
+/**/
+.Company h2{             
     margin-bottom: 20px;
     font-size: 36px;
     position: relative;
     left: 350px;
     bottom: 180px ;
-
 }
-
-.Customers h2{          /*specifying margin,font,and position for customer section*/
-
+/**/
+.Customers h2{         
     margin-bottom: 20px;
     font-size: 36px;
     position: relative;
     bottom: 180px;
 }
-
+/**/
 .search-engine-optimization h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
+/**/
 .online-reputation-management h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
+/**/
 .social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
-
 }
-
-#L{                                  /*adjusting positiopn for paragraph on learning*/
-
+/**/
+#L{                                  
     position: relative;
     bottom: 190px;
 }
-
-#Co{                               /*adjusting positiopn for paragraph on company*/
+/**/
+#Co{                              
 position: relative;
 bottom: 190px;
 left: 350px;
-
 }
-
-#Cu{                               /*adjusting position for paragraph on customer section*/
-
+/**/
+#Cu{                               
     position: relative;
     bottom: 190px;
 }
-
+/**/
 footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
-    background-color: yellow;  /*footer background changed to yellow*/
+    background-color: yellow;  
 }
-
+/**/
 footer h2 {
     font-size: 20px;
 }
