--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,32 +26,33 @@ header h1 .seo {
 }
 /*navigation bar decoration to show options to navigate throught the website*/
 header nav {
-    padding-top: 15px; /**/
-    margin-right: 20px; /**/
-    float: right; /**/
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; /**/
-    font-size: 20px; /**/
+    padding-top: 15px; /*space inside header of 15 px*/
+    margin-right: 20px; /*increasing the right side of the margin element by 20px*/
+    float: right; /*mivng child elements to the right of the header*/
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif; /*using different font families to each one*/
+    font-size: 20px; /*using same font size*/
     
 }
-/**/
+/*I am specifying the type of list*/
 header nav ul {
-    list-style-type: none; /**/
+    list-style-type: none; /*type of list not specified*/
 }
 
-header nav ul li { /**/
-    display: inline-block; /**/
-    margin-left: 25px; /**/
+header nav ul li { /*targeting navigation bar element inside header to style it*/
+    display: inline-block; /*showing in a specific height and width size*/
+    margin-left: 25px; /*increasing size of the margin-left side*/
 }
-/**/
+/*targeting all hyperlink sections from navigation bar to assign white color*/
 a {
     color: #ffffff;
     text-decoration: none;
 }
-/**/
+/*specifying font size of all paragraph elements from this website, to be the same*/
 p {
     font-size: 16px;
 }
-/**/
+/*targeting section element called hero to display information about the company where the background image is located, and also giving specific style attributes
+to the image, and text color*/
 .hero {
     height: 800px;
     width: 100%;
@@ -61,14 +62,14 @@ p {
     background-position: center;
     color:white
 }
-/**/
+/*I am positioning the title of the hero section(about the company) to be exactly located on the top-left*/
 .hero h1{                /*positioning heading before styled paragraph on the backgorund image section*/
     position: relative;
     top: 440px; /**/
     left: 100px; /**/
 }
-
-#intro{                 /*styling and positioning paragraph above heading and located on the background image section*/
+/*targeting paragraph section of the hero container by specifying font-size, font-color, and even padding size and a linear margin defined, and relative position*/
+#intro{                 
     position: relative;
     top: 440px;
     left: 100px;
@@ -77,23 +78,24 @@ p {
     display: inline-block;
     font-size: 20px;
 }
-/**/
+/*defining one section element defined inside of the body where it targets the article semantic elements, and moving all child elements(articles) to the left of website*/
 .float-left {
     float: left;
     margin-right: 25px;
 }
-/**/
+/*defining second section element inside of body where it targets other article semantic elements dipslayed on the right of website*/
 .float-right {
     float: right;
     margin-left: 25px;
 }
-/**/
+/*Targeting all articles from float-left container by adjusting each one to be exactly in order*/
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
-/**/
+/*targeting all articles to be in order from the float-right container with background-color, padding size,clear to control the floated elements, different types of 
+font family*/
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -104,55 +106,58 @@ p {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: red;
 }
-/**/
+/*targeting first article from the float-rgiht section container by adjusting margin-bottom size and font-color*/
 .benefit-lead {
     margin-bottom: 32px;
     color: #ffffff;
 }
-/**/
+/*targeting second article from the float-rgiht section container by adjusting margin-bottom size and font-color*/
 .benefit-brand {
     margin-bottom: 32px;
     color: #ffffff;
 }
-/**/
+/*targeting third article from the float-rgiht section container by adjusting margin-bottom size and font-color*/
 .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
 }
-/**/
+/*targeting first article title from benefits section on the float-right container by moving it to the center and an article botton-margin size of 10px*/
 .benefit-lead h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-/**/
+/*targeting second article title from benefits section on the float-right container by moving it to the center and an article botton-margin size of 10px*/
 .benefit-brand h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-/**/
+/*targeting third article title from benefits section on the float-right container by moving it to the center and an article botton-margin size of 10px*/
 .benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
-/**/
+/*targeting first article icon from benefits section on the float-right container by using block display to make it more concentrated in the space, margin
+size accordingly to the container space and giving a maximum width of 150 px*/
 .benefit-lead img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-/**/
+/*targeting second article icon from benefits section on the float-right container by using block display to make it more concentrated in the space, margin
+size accordingly to the container space and giving a maximum width of 150 px*/
 .benefit-brand img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
+/*targeting third article icon from benefits section on the float-right container by using block display to make it more concentrated in the space, margin
+size accordingly to the container space and giving a maximum width of 150 px*/
 .benefit-cost img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-/**/
+/*targeting first article form the float-left container by using margin-bottom size, padding size, height of article, and colors*/
 .Learning{                  
     margin-bottom: 20px;
     padding: 50px;
@@ -162,7 +167,7 @@ p {
     color: #ffffff;
 
 }
-/**/
+/*targeting second article form the float-left container by using margin-bottom size, padding size, height of article, and colors*/
 .Company{                  
     margin-bottom: 20px;
     padding: 50px;
@@ -172,7 +177,7 @@ p {
     color: #ffffff;
 
 }
-/**/
+/*targeting third article form the float-left container by using margin-bottom size, padding size, height of article, and colors*/
 .Customers{             
     margin-bottom: 20px;
     padding: 50px;
@@ -182,7 +187,7 @@ p {
     color: #ffffff;
 
 }
-/**/
+/*targeting fourth article form the float-left container by using margin-bottom size, padding size, height of article, and colors*/
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
@@ -191,7 +196,7 @@ p {
     background-color: red; 
     color: #ffffff;
 }
-/**/
+/*targeting fifth article form the float-left container by using margin-bottom size, padding size, height of article, and colors*/
 .online-reputation-management {
     margin-bottom: 20px;
     padding: 50px;
@@ -200,7 +205,7 @@ p {
     background-color: red; /**/
     color: #ffffff;
 }
-/**/
+/*targeting sixth article form the float-left container by using margin-bottom size, padding size, height of article, and colors*/
 .social-media-marketing {
     margin-bottom: 20px;
     padding: 50px;
